# information

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.mjs  .markdownlint-cli2.mjs  .markdownlint.json  .markdownlint.jsonc  .prettierignore  AGENTS.md  Fabric - Transfer & View API.md  Fabric - Transfer API.md  GlobalAnnotationDataTest.java  GlobalTransferTransaction.java  characters.md  concept.txt  conceptualization.txt  definition.txt  design.txt  document.md  init  init.bat  init.py  init.sh  maintenance  maintenance.bat  maintenance.py  package.json  pnpm-lock.yaml  preamble.sty  prek.toml  pyproject.toml  requirements.txt  temp.py  temp.py.log.txt  utility.py.md
.agents/instructions/: README.md  academic-notes.instructions.md  agent-quickstart.instructions.md  archives.instructions.md  commit-convention.instructions.md  config-folders.instructions.md  content-organization.instructions.md  core-workflows.instructions.md  editing-conventions.instructions.md  init-wrapper.instructions.md  markdown-notes.instructions.md  python-entry-points.instructions.md  special-pytextgen.instructions.md  special.instructions.md  submodule-private.instructions.md  submodule-pyarchivist.instructions.md  submodule-pytextgen.instructions.md  submodule-self.instructions.md
.agents/prompts/: commit-staged-flashcard-notes.prompt.md  commit-staged-flashcard-progress.prompt.md  commit-staged.prompt.md  resolve-merge-conflicts-flashcard-states.prompt.md
.agents/skills/: README.md
.github/: dependabot.yml
.github/instructions/: README.md  academic-notes.instructions.md  agent-quickstart.instructions.md  (+15 more)
.husky/: commit-msg  pre-commit  pre-push  prepare-commit-msg  prepare-commit-msg.js  prepare-commit-msg.mjs
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  daily-notes.json  graph.json  templates.json  workspace  zk-prefixer.json
C++/: .gitignore
C++/HKOI/: CMakeLists.txt  main.cpp
academic/: Albustix.md  Arrhenius equation.md  Avogadro's law.md  BS 1363.md  Bohr model.md  Clinistrip.md  Earth.md  GHS hazard pictograms.md  Geiger–Marsden experiments.md  Haber process.md  Hess's law.md  IUPAC nomenclature of inorganic chemistry.md  IUPAC nomenclature of organic chemistry.md  IUPAC numerical multiplier.md  Kepler's laws of planetary motion.md  Le Chatelier's principle.md  Lenz's law.md  Liebig condenser.md  London dispersion force.md  Ostwald process.md  Reichstein process.md  Rutherford model.md  VSEPR theory.md  acid strength.md  acid.md  addition reaction.md  air separation.md  alcohol.md  aldehyde.md  alkali metal.md  alkali.md  alkaline earth metal.md  alkaline fuel cell.md  alkane.md  alkene.md  aluminium hydroxide.md  aluminium oxide.md  aluminium.md  amide.md  amine.md  (+207 more)
archives/: .markdownlint.json  index.md
attachments/: attachments.md
general/: (ε, δ)-definition of limit.md  .NET MAUI.md  .markdownlint.json  .markdownlint.jsonc  0 (number).md  1-forms.md  1.96.md  1000BASE-SX.md  100BASE-T1.md  100BASE-TX.md  2-category.md  2-form.md  2-norm.md  2-sphere.md  2015 Nepal blockade.md  2021–2023 global energy crisis.md  3-category.md  3-sigma rule.md  3-state buffers.md  4-momentum.md  4511.md  7400 series.md  A. G. Bedeian.md  ABCD-parameters.md  ADSR envelope.md  ANOVA.md  APICS The Association for Operations Management.md  ARR (disambiguation).md  ASIN (identifier).md  AWGN.md  Académie Royale des Sciences.md  Achaemenid currency.md  Acta Physica Polonica B.md  Adapteva.md  Addison–Wesley.md  Albustix.md  Alexander Stepanovich Popov.md  Algol paradox.md  Amazon.com.md  American Mathematical Monthly.md  (+3446 more)
scripts/: .gitignore  .markdownlint.jsonc  __init__.py  convert wiki.py  convert wiki.sh  convert_wiki  convert_wiki.bat  convert_wiki.filename_rename_map.json  convert_wiki.filename_rename_map.jsonc  convert_wiki.py  convert_wiki.sh  find_missing_flashcard_states  find_missing_flashcard_states.bat  find_missing_flashcard_states.py  find_missing_flashcard_states.sh  find_missing_flashcards  find_missing_flashcards.bat  find_missing_flashcards.py  find_missing_flashcards.sh  new wiki page.bat  new_wiki_page.bat  new_wiki_page.md.txt  new_wiki_page.py  new_wiki_page.sh  pack.bat  pack.py  pack.sh  pow.bat  pow.py  power  power.bat  power.py  power.sh  prepare-commit-msg.mjs  prepare-commit-msg.sh  publish.bat  publish.py  publish.sh  rematch_flashcard_states  rematch_flashcard_states.bat  (+14 more)
self/: funding.md  quote.md  tracker.md
special/: .markdownlint.json  .markdownlint.jsonc  5-step persuasive selling.md  Analytic Solver usage.md  Blender usage.md  GNU Debugger.md  IBM prioritization grid.md  Microsoft Windows usage.md  PPTG change impact framework.md  Vim usage.md  blue ocean strategy.md  business model canvas.md  buyer utility map.md  command library.md  constant of integration.md  cover letter.md  d.school design thinking bootleg.md  examination keys - HKDSE liberal studies.md  integration by substitution.md  lift chart.md  linear—rotational motion analogy.md  list of Nobel laureates in Astronomy.md  list of mathematical pathologies.md  market segmentation.md  moment of inertia.md  name tag.md  profitability framework.md  regex library.md  résumé.md  résumé.md  standard output.md  value proposition canvas.md  六國論.md  出師表.md  勸學（節錄）.md  名言警句.md  始得西山宴遊記.md  孝.md  山居秋暝.md  岳陽樓記.md  (+14 more)
special/academia/HKUST/COMP 2211/: index.md  pyproject.toml  questions.md
templates/: pytextgen UUID.md
tests/: test_docstrings.py  test_git_executable.py  test_module_exports.py
tools/: .gitignore  convert Canvas assignment  convert Canvas assignment.bat  convert Canvas assignment.py  convert Canvas assignment.sh  convert HKUST Canvas submission.py  convert HKUST Zinc submission.py  convert HKUST Zinc submission.sh  convert wiki  convert wiki.bat  convert wiki.py  convert wiki.py.names map.json  globals.py  new wiki page  new wiki page.sh  pack.bat  pack.py  pow  pow.py  pow.sh  publish.bat  publish.py  publish.sh  retract  retract.py  retract.sh  split flashcard states.py  utility.py.md
(+5202 files in other folders)
